# craftobj

./: CLAUDE.md  Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: extension.rs  fetch.rs  lib.rs
crates/client/tests/: e2e.rs  e2e_content_flow.rs  e2e_push_distribute.rs  e2e_two_node.rs
crates/core/: Cargo.toml
crates/core/src/: access.rs  economics.rs  lib.rs  payment_channel.rs  pre.rs  signing.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: aggregator.rs  api_key.rs  behaviour.rs  challenger.rs  channel_store.rs  cli.rs  commands.rs  config.rs  content_tracker.rs  degradation.rs  disk_monitor.rs  errors.rs  events.rs  eviction.rs  handler.rs  health.rs  health_reactor.rs  health_scan.rs  lib.rs  main.rs  pdp.rs  peer_reconnect.rs  peer_scorer.rs  pex.rs  pex_wire.rs  piece_map.rs  piece_transfer.rs  protocol.rs  push_target.rs  reannounce.rs  receipt_store.rs  removal_cache.rs  repair.rs  scaling.rs  service.rs  settlement.rs  settlement_cycle.rs  stream_manager.rs  ws_server.rs
crates/daemon/tests/: integration_e2e.rs
crates/routing/: Cargo.toml
crates/routing/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  merkle.rs
crates/transfer/: Cargo.toml
crates/transfer/src/: lib.rs  wire.rs
docs/: NETWORK_HEALTH_DESIGN.md  PIECE_TRACKING_DESIGN.md
tests/: comprehensive_integration_test.sh  integration_test.sh  multi_node.sh
