[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/store",
    "crates/routing",
    "crates/transfer",
    "crates/client",
    "crates/daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Craftec"]
license = "MIT"

[workspace.dependencies]
# Internal crates
datacraft-core = { path = "crates/core" }
datacraft-store = { path = "crates/store" }
datacraft-routing = { path = "crates/routing" }
datacraft-transfer = { path = "crates/transfer" }
datacraft-client = { path = "crates/client" }

# craftec-core shared foundation
craftec-core = { path = "../craftec-core/crates/core" }
craftec-crypto = { path = "../craftec-core/crates/crypto" }
craftec-erasure = { path = "../craftec-core/crates/erasure" }
craftec-network = { path = "../craftec-core/crates/network" }
craftec-keystore = { path = "../craftec-core/crates/keystore" }
craftec-logging = { path = "../craftec-core/crates/logging" }
craftec-settings = { path = "../craftec-core/crates/settings" }
craftec-app = { path = "../craftec-core/crates/app" }
craftec-ipc = { path = "../craftec-core/crates/ipc" }

# Async
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# P2P
libp2p = { version = "0.56", features = [
    "tokio",
    "dns",
    "tcp",
    "noise",
    "yamux",
    "kad",
    "identify",
    "relay",
    "dcutr",
    "macros",
    "request-response",
    "mdns",
    "rendezvous",
    "gossipsub",
    "autonat",
] }
libp2p-stream = "0.4.0-alpha"

# Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
rand = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
hex = "0.4"
bincode = "1"

[profile.release]
overflow-checks = true
