[package]
name = "craftobj-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftobj-core = { workspace = true }
craftobj-store = { workspace = true }
craftobj-routing = { workspace = true }
craftobj-transfer = { workspace = true }
craftec-erasure = { workspace = true }
craftec-crypto = { workspace = true }
craftec-network = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
