[package]
name = "datacraft-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftec-core = { workspace = true }
craftec-erasure = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
libp2p = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
