[package]
name = "craftobj-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftobj-core = { workspace = true }
craftobj-client = { workspace = true }
craftobj-store = { workspace = true }
craftobj-routing = { workspace = true }
craftobj-transfer = { workspace = true }
craftec-app = { workspace = true }
craftec-core = { workspace = true }
craftec-erasure = { workspace = true }
craftec-ipc = { workspace = true }
craftec-logging = { workspace = true }
craftec-keystore = { workspace = true }
craftec-network = { workspace = true }
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
craftec-settlement = { workspace = true }
craftec-prover = { workspace = true }
craftec-prover-guest-types = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
tokio-tungstenite = "0.24"
solana-sdk = { workspace = true }
solana-client = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
