[package]
name = "datacraft-routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
datacraft-core = { workspace = true }
craftec-network = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
