[package]
name = "craftobj-routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftobj-core = { workspace = true }
craftec-network = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
ed25519-dalek = { workspace = true }
