[package]
name = "datacraft-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
datacraft-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
