[package]
name = "craftobj-transfer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftobj-core = { workspace = true }
craftobj-store = { workspace = true }
craftec-erasure = { workspace = true }
craftec-network = { workspace = true }
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
